python/testData/inspections/PyUnresolvedReferencesInspection/unresolvedImport.py
import <error descr="No module named wurm">wurm</error>

wurm()
